# issue-providers-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml
.github/workflows/: bump.yml  publish.yml  release.yml  test.yml
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: capabilities.rs  lib.rs  models.rs  pagination.rs  registry.rs
crates/core/tests/: builder.rs  mutations.rs  registry.rs  serde.rs
crates/jira/: CHANGELOG.md  Cargo.toml  README.md
crates/jira/src/: client.rs  comments.rs  entities.rs  issues.rs  lib.rs  model.rs  resources.rs  transitions.rs  transport.rs  util.rs  viewer.rs
crates/linear/: CHANGELOG.md  Cargo.toml  README.md
crates/linear/src/: client.rs  comments.rs  entities.rs  issues.rs  lib.rs  transport.rs  viewer.rs
crates/linear/tests/: capabilities.rs  mapping.rs
docs/: 00-overview.md  01-architecture.md  02-contracts.md  03-providers.md  04-development.md  README.md
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs
src/core/: capabilities.rs  errors.rs  registry.rs
src/jira/: client.rs  comments.rs  entities.rs  issues.rs  mod.rs  model.rs  resources.rs  transitions.rs  transport.rs  util.rs  viewer.rs
src/linear/: client.rs  comments.rs  entities.rs  issues.rs  mod.rs  transport.rs  viewer.rs
tests/: core_builder.rs  core_mutations.rs  core_registry.rs  core_serde.rs  linear_capabilities.rs  linear_mapping.rs
