[package]
name = "omnitrack"
description = "Universal issue-tracker provider contracts and clients (Linear, Jira, ...) for Rust, in one crate."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akira-io/omnitrack-rs"
homepage = "https://github.com/akira-io/omnitrack-rs"
rust-version = "1.89"
version = "0.3.0"
readme = "README.md"
keywords = ["issue-tracker", "linear", "jira", "provider", "async"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
publish = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
reqwest = { version = "0.12.16", default-features = false, features = ["rustls-tls", "json"], optional = true }

[dev-dependencies]
futures = "0.3.31"
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["linear"]
linear = ["dep:serde_json", "dep:reqwest"]
jira = ["dep:serde_json", "dep:reqwest"]
all = ["linear", "jira"]
testing = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[[example]]
name = "linear_minimal"
path = "examples/src/main.rs"
required-features = ["linear"]
