[package]
name = "issue-providers-examples"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
issue-provider-core.workspace = true
issue-provider-linear = { path = "../crates/linear" }

[lints]
workspace = true
