[package]
name = "issue-provider-core"
description = "Provider-neutral contracts for issue trackers (Linear, Jira, ...)"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"
readme = "README.md"
keywords = ["issue-tracker", "provider", "linear", "jira", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde.workspace = true

[dev-dependencies]
futures.workspace = true
serde_json = "1.0.145"

[lints]
workspace = true
