[package]
name = "issue-provider-jira"
description = "Jira issue-tracker driver for issue-provider-core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.3.0"
readme = "README.md"
keywords = ["jira", "issue-tracker", "rest", "provider", "async"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
issue-provider-core.workspace = true
serde.workspace = true
serde_json = "1.0.145"
reqwest = { version = "0.12.16", default-features = false, features = ["rustls-tls", "json"] }

[lints]
workspace = true
