[package]
name = "issue-provider-linear"
description = "Linear issue-tracker driver for issue-provider-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
issue-provider-core.workspace = true
serde.workspace = true
serde_json = "1.0.145"
reqwest = { version = "0.12.16", default-features = false, features = ["rustls-tls", "json"] }

[lints]
workspace = true
